--- a/package.json
+++ b/package.json
@@ -1,22 +1,31 @@
 {
-   "name": "ds-auth-service",
-   "version": "0.0.1",
-   "description": "Awesome project developed with TypeORM.",
-   "type": "commonjs",
-   "devDependencies": {
-      "ts-node": "10.7.0",
-      "@types/node": "^16.11.10",
-      "typescript": "4.5.2"
-   },
-   "dependencies": {
-      "typeorm": "0.3.7",
-      "reflect-metadata": "^0.1.13",
-      "sqlite3": "^5.0.2",
-      "express": "^4.17.2",
-      "body-parser": "^1.19.1"
-   },
-   "scripts": {
-      "start": "ts-node src/index.ts",
-      "typeorm": "typeorm-ts-node-commonjs"
-   }
+  "name": "ds-auth-service",
+  "version": "0.0.1",
+  "description": "Awesome project developed with TypeORM.",
+  "type": "commonjs",
+  "devDependencies": {
+    "@types/node": "^16.11.10",
+    "ts-node": "10.7.0",
+    "typescript": "4.5.2"
+  },
+  "dependencies": {
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
+    "express": "^4.17.2",
+    "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.7.8",
+    "nodemon": "^2.0.19",
+    "reflect-metadata": "^0.1.13",
+    "sqlite3": "^5.0.2",
+    "typeorm": "0.3.7"
+  },
+  "scripts": {
+    "dev": "nodemon --exec ts-node src/index.ts",
+    "start": "ts-node src/index.ts",
+    "typeorm": "typeorm-ts-node-esm -d ./src/data-source.ts",
+    "mg": "npm run typeorm migration:run",
+    "mm": "npm run typeorm migration:generate ./src/migration"
+  }
 }
