--- a/package.json
+++ b/package.json
@@ -26,6 +26,6 @@
     "start": "ts-node src/index.ts",
     "typeorm": "typeorm-ts-node-esm -d ./src/data-source.ts",
     "mg": "npm run typeorm migration:run",
-    "mm": "npm run typeorm migration:generate ./src/migration"
+    "mm": "npm run typeorm migration:generate src/migration/app"
   }
 }
