--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "Awesome project developed with TypeORM.",
   "type": "commonjs",
   "devDependencies": {
-    "@types/node": "^16.11.10",
-    "ts-node": "10.7.0",
-    "typescript": "4.5.2"
+    "@types/node": "^16.11.10"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
@@ -19,7 +17,9 @@
     "nodemon": "^2.0.19",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
-    "typeorm": "0.3.7"
+    "typeorm": "0.3.7",
+    "ts-node": "10.7.0",
+    "typescript": "4.5.2"
   },
   "scripts": {
     "dev": "nodemon --exec ts-node src/index.ts",
