--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.7.8",
     "nodemon": "^2.0.19",
+    "react-code-blocks": "^0.0.9-0",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
-    "typeorm": "0.3.7",
     "ts-node": "10.7.0",
+    "typeorm": "0.3.7",
     "typescript": "4.5.2"
   },
   "scripts": {
